# travel-agent

./: .gitignore
backend/: .env.example  pyproject.toml
backend/app/: config.py  debug_run.py  logger.py  main.py  server.py
backend/app/agents/: budget_agent.py  final_agent.py  flight_agent.py  hotel_agent.py  itinerary_agent.py  request_parser_agent.py
backend/app/api/: routes.py
backend/app/graph/: builder.py  nodes.py  state.py
backend/app/llm/: model.py  prompts.py
backend/app/schemas/: travel.py
backend/app/services/: travel_planner.py
backend/app/tools/: flight_tool.py  hotel_tool.py
frontend/: .env.example  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AgentPipeline.tsx  BudgetCard.tsx  CurrencyWidget.tsx  DestinationHero.tsx  FinalPlan.tsx  Icons.tsx  ItineraryTimeline.tsx  Markdown.tsx  Options.tsx  PdfExport.tsx  QueryComposer.tsx  TripOverview.tsx  TripWizard.tsx
frontend/src/lib/: api.ts  currency.ts  format.ts  parseItinerary.ts  types.ts  unsplash.ts
